--- a/templates/finish.html
+++ b/templates/finish.html
@@ -7,10 +7,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="container py-4">
-  <div class="alert alert-primary">
-    🎉 お疲れさまでした！<br />
-    すべての問題を終了しました。
-  </div>
-  <a href="/" class="btn btn-primary">単元選択に戻る</a>
+
+  <h1 class="mb-4">🎉 クイズ終了！</h1>
+  <p>全 {{ total }} 問、挑戦お疲れさまでした！</p>
+
+  <a href="/" class="btn btn-primary">最初に戻る</a>
+
 </body>
 </html>
